# spdm-rs

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  rust-toolchain
codec/: Cargo.toml
codec/src/: codec.rs  lib.rs  macros.rs
fuzz-target/fuzzlib/: Cargo.toml
fuzz-target/fuzzlib/src/: fake_aead_impl.rs  fake_device_io.rs  fake_hkdf_impl.rs  lib.rs  secret.rs  time.rs
fuzz-target/pass_context/: Cargo.toml
fuzz-target/pass_context/src/: main.rs  pass_requester.rs  pass_responder.rs
fuzz-target/random_requester/: Cargo.toml
fuzz-target/random_requester/src/: main.rs
fuzz-target/requester/digest_req/: Cargo.toml
idekm/: Cargo.toml
idekm/src/: lib.rs  pci_idekm.rs
idekm/src/pci_ide_km_requester/: mod.rs  pci_ide_km_req_key_prog.rs  pci_ide_km_req_key_set_go.rs  pci_ide_km_req_key_set_stop.rs  pci_ide_km_req_query.rs
idekm/src/pci_ide_km_responder/: mod.rs  pci_ide_km_rsp_dispatcher.rs  pci_ide_km_rsp_key_prog.rs  pci_ide_km_rsp_key_set_go.rs  pci_ide_km_rsp_key_set_stop.rs  pci_ide_km_rsp_query.rs
pcidoe_transport/: Cargo.toml
pcidoe_transport/src/: header.rs  lib.rs
spdmlib/: Cargo.toml  build.rs
spdmlib/etc/: chunk_test_config.json  config.json  pqc_config.json
spdmlib/fuzz/: Cargo.toml
spdmlib/fuzz/fuzz_targets/: algorithm_req.rs  algorithm_rsp.rs  capability_req.rs  capability_rsp.rs  certificate_req.rs  certificate_rsp.rs  challenge_req.rs  challenge_rsp.rs  deliver_encapsulated_response_certificate_rsp.rs  deliver_encapsulated_response_digest_rsp.rs  deliver_encapsulated_response_rsp.rs  digest_req.rs  digest_rsp.rs  encapsulated_request_certificate_req.rs  encapsulated_request_digest_req.rs  encapsulated_request_req.rs  end_session_req.rs  end_session_rsp.rs  finish_req.rs  finish_rsp.rs  fuzz_spdm_x509.rs  fuzz_x509v3.rs  get_encapsulated_request_rsp.rs  heartbeat_req.rs  heartbeat_rsp.rs  key_exchange_req.rs  key_update_req.rs  key_update_rsp.rs  keyexchange_rsp.rs  measurement_req.rs  measurement_rsp.rs  psk_exchange_req.rs  psk_finish_req.rs  psk_finish_rsp.rs  pskexchange_rsp.rs  vendor_req.rs  vendor_rsp.rs  version_req.rs  version_rsp.rs
spdmlib/src/: error.rs  lib.rs
spdmlib/src/common/: key_schedule.rs  mod.rs  opaque.rs  session.rs  spdm_codec.rs
spdmlib/src/crypto/: bytes_mut_scrubbed.rs  crypto_callbacks.rs  crypto_tests.rs  mod.rs  x509v3.rs
spdmlib/src/message/: algorithm.rs  algorithm_test.rs  capability.rs  capability_test.rs  certificate.rs  certificate_test.rs  challenge.rs  challenge_test.rs  chunk_get.rs  chunk_get_test.rs  chunk_send.rs  chunk_send_test.rs  digest.rs  digest_test.rs  encapsulated.rs  encapsulated_test.rs  end_session.rs  end_session_test.rs  error.rs  finish.rs  finish_test.rs  heartbeat.rs  heartbeat_test.rs  key_exchange.rs  key_exchange_test.rs  key_update.rs  key_update_test.rs  measurement.rs  measurement_test.rs  mod.rs  mod_test.common.inc.rs  psk_exchange.rs  psk_finish.rs  respond_if_ready.rs  vendor.rs  version.rs  version_test.rs
spdmlib/src/protocol/: algo.rs  capability.rs  mod.rs  version.rs
spdmlib/src/requester/: challenge_req.rs  context.rs  encap_certificate.rs  encap_digest.rs  encap_error.rs  encap_req.rs  end_session_req.rs  finish_req.rs  get_capabilities_req.rs  get_certificate_req.rs  get_digests_req.rs  get_measurements_req.rs  get_version_req.rs  handle_error_response_req.rs  heartbeat_req.rs  key_exchange_req.rs  key_update_req.rs  mod.rs  mutual_authenticate.rs  negotiate_algorithms_req.rs  psk_exchange_req.rs  psk_finish_req.rs  vendor_req.rs
spdmlib/src/responder/: algorithm_rsp.rs  app_message_handler.rs  capability_rsp.rs  certificate_rsp.rs  challenge_rsp.rs  context.rs  digest_rsp.rs  encap_get_certificate.rs  encap_get_digest.rs  encap_rsp.rs  end_session_rsp.rs  error_rsp.rs  finish_rsp.rs  heartbeat_rsp.rs  key_exchange_rsp.rs  key_update_rsp.rs  measurement_rsp.rs  mod.rs  psk_exchange_rsp.rs  psk_finish_rsp.rs  vendor_rsp.rs  version_rsp.rs
spdmlib/src/secret/: mod.rs  secret_callback.rs
spdmlib/src/time/: mod.rs  time_callbacks.rs
spdmlib/src/watchdog/: mod.rs  watchdog_callbacks.rs
spdmlib_crypto_aws_lc/: Cargo.toml
spdmlib_crypto_aws_lc/src/: aead_impl.rs  asym_verify_impl.rs  cert_operation_impl.rs  dhe_impl.rs  hash_impl.rs  hkdf_impl.rs  hmac_impl.rs  kem_impl.rs  lib.rs  pqc_asym_sign_impl.rs  pqc_asym_verify_impl.rs  pqc_cert_verify_impl.rs  rand_impl.rs
spdmlib_crypto_mbedtls/: Cargo.toml  README.md
spdmlib_crypto_mbedtls/mbedtls-platform-support/: Cargo.toml  Readme.md
spdmlib_crypto_mbedtls/src/: aead_impl.rs  asym_verify_impl.rs  cert_operation_impl.rs  dhe_impl.rs  hash_impl.rs  hkdf_impl.rs  hmac_impl.rs  kem_impl.rs  lib.rs  pqc_asym_verify_impl.rs  rand_impl.rs
sys_time/: Cargo.toml
sys_time/src/: lib.rs  rtc.rs
tdisp/: Cargo.toml
tdisp/src/: lib.rs  pci_tdisp.rs
tdisp/src/pci_tdisp_requester/: mod.rs  pci_tdisp_req_bind_p2p_stream_request.rs  pci_tdisp_req_get_device_interface_report.rs  pci_tdisp_req_get_device_interface_state.rs  pci_tdisp_req_get_tdisp_capabilities.rs  pci_tdisp_req_get_tdisp_version.rs  pci_tdisp_req_lock_interface_request.rs  pci_tdisp_req_set_mmio_attribute_request.rs  pci_tdisp_req_start_interface_request.rs  pci_tdisp_req_stop_interface_request.rs  pci_tdisp_req_unbind_p2p_stream_request.rs  pci_tdisp_req_vdm_request.rs
tdisp/src/pci_tdisp_responder/: mod.rs  pci_tdisp_rsp_bind_p2p_stream_request.rs  pci_tdisp_rsp_device_interface_report.rs  pci_tdisp_rsp_device_interface_state.rs  pci_tdisp_rsp_dispatcher.rs  pci_tdisp_rsp_lock_interface_request.rs  pci_tdisp_rsp_set_mmio_attribute_request.rs  pci_tdisp_rsp_start_interface_request.rs  pci_tdisp_rsp_stop_interface_request.rs  pci_tdisp_rsp_tdisp_capabilities.rs  pci_tdisp_rsp_tdisp_error.rs  pci_tdisp_rsp_tdisp_version.rs  pci_tdisp_rsp_unbind_p2p_stream_request.rs  (+1 more)
test/cavp_acvts_test/: 0001-Add-new-methods-for-private-key-handling-and-public-.patch  Cargo.toml  pre-build.sh  readme.md
test/spdm-emu/: Cargo.toml
test/spdm-requester-emu/: Cargo.toml
test/spdmlib-test/: Cargo.toml
(+377 files in other folders)
