[package]
name = "codec"
version = "0.2.2"
authors = [
    "Xiaoyu Lu <xiaoyux.lu@intel.com>",
    "Jiewen Yao <jiewen.yao@intel.com>",
    "Longlong Yang <longlong.yang@intel.com>"
    ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = []
alloc = []
