[package]
name = "idekm"
license = "BSD-2-Clause-Patent"
version = "0.1.0"
authors = [
    "Jiewen Yao <jiewen.yao@intel.com>",
    "Xiaoyu Lu <xiaoyux.lu@intel.com>",
    "Longlong Yang <longlong.yang@intel.com>"
    ]
edition = "2018"

[dev-dependencies]

[build-dependencies]

[dependencies]
codec = { path = "../codec" }
zeroize = { version = "1.5.0", features = ["zeroize_derive"]}
spdmlib = { path = "../spdmlib", default-features = false, features = ["spdm-ring"]}
conquer-once = { version = "0.3.2", default-features = false }
maybe-async = "0.2.7"

[features]
is_sync = ["spdmlib/is_sync", "maybe-async/is_sync"]