[package]
name = "pcidoe_transport"
version = "0.1.0"
authors = [
    "Xiaoyu Lu <xiaoyux.lu@intel.com>",
    "Jiewen Yao <jiewen.yao@intel.com>"
    ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = {path= "../codec"}
spdmlib = { path = "../spdmlib", default-features = false}
futures = { version = "0.3", default-features = false }
async-trait = "0.1.71"
spin = { version = "0.9.8" }
maybe-async = "0.2.7"

[features]
is_sync = ["spdmlib/is_sync", "maybe-async/is_sync"]