[package]
name = "spdmlib"
version = "0.1.0"
authors = [
    "Jiewen Yao <jiewen.yao@intel.com>",
    "Xiaoyu Lu <xiaoyux.lu@intel.com>",
    "Stanislaw Grams <stanislaw.grams@intel.com>"
    ]
edition = "2018"
license = "Apache-2.0 or MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = {path= "../codec"}
bitflags = "1.2.1"
log = "0.4.13"
bytes = { version="1", default-features=false }
conquer-once = { version = "0.3.2", default-features = false }
lazy_static = { version = "1.0", features = ["spin_no_std"], optional = true }
ring = { version = "0.17.14", default-features = false, features = ["alloc", "less-safe-getrandom-custom-or-rdrand"], optional = true }
webpki = { package = "rustls-webpki", version = "0.103.6", default-features = false, features = ["alloc", "ring"], optional = true}
rustls-pki-types = { version = "1.10.0", default-features = false, features = ["alloc"], optional = true}
untrusted = { version = "0.9.0", optional = true }
zeroize = { version = "1.5.0", features = ["zeroize_derive"]}
maybe-async = "0.2.7"
futures = { version = "0.3", default-features = false }
async-trait = "0.1.71"
spin = "0"

[target.'cfg(any(target_os = "uefi", target_os = "none"))'.dependencies]
sys_time = { path = "../sys_time" }

[build-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
spin = { version = "0.9.8", optional = true }

[dev-dependencies]
pcidoe_transport = { path = "../pcidoe_transport" }
byteorder = { version = "1.0", default-features = false }
bit_field = "0.10.1"
spin = { version = "0.9.8" }
env_logger = "*"

[features]
default = ["spdm-ring", "std", "hashed-transcript-data"]
std = ["webpki/std", "rustls-pki-types/std"]
spdm-ring = ["ring", "webpki", "rustls-pki-types", "untrusted", "lazy_static", "spin"]
downcast = []
hashed-transcript-data = []
mut-auth = []
mandatory-mut-auth = ["mut-auth"]
is_sync = ["maybe-async/is_sync"]
fips = []
