[package]
name = "spdmlib_crypto_mbedtls"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0 or MIT"

[dependencies]
spdmlib = { path = "../spdmlib", default-features = false}
# spdm_x509 provides ML-DSA (FIPS 204) aware certificate-chain validation via
# its ring-backed validator plus the runtime PQC verifier hook. Delegate to it
# (as the ring cert operation does) so PQC certificate chains work with the
# mbedtls backend too. ring-backend matches how spdmlib already builds spdm_x509.
spdm_x509 = { path = "../spdmlib/src/crypto/spdm_x509", default-features = false, features = ["ring-backend"] }
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.9.8"
zeroize = { version = "1.5.0", features = ["zeroize_derive"]}
mbedtls = { version = "0.9.1", default-features = false, features = ["no_std_deps", "rdrand"]}
mbedtls-sys-auto = { version = "2.28.0", default-features = false }

[features]
default = ["hashed-transcript-data", "std"]
hashed-transcript-data = ["spdmlib/hashed-transcript-data"]
std = []
