[package]
name = "sys_time"
version = "0.1.0"
authors = ["Xiaoyu Lu <xiaoyux.lu@intel.com>"]
edition = "2018"
license = "Apache-2.0 or MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x86_64 = "=0.14.12"
time = { version = "0.3", default-features = false }
