[package]
name = "tdisp"
version = "0.2.0"
authors = [
    "Jiewen Yao <jiewen.yao@intel.com>",
    "Xiaoyu Lu <xiaoyux.lu@intel.com>",
    "Longlong Yang <longlong.yang@intel.com>"
    ]
edition = "2018"
license = "Apache-2.0 or MIT"

[dev-dependencies]

[build-dependencies]

[dependencies]
codec = { path = "../codec" }
bitflags = "1.2.1"
spdmlib = { path = "../spdmlib", default-features = false }
conquer-once = { version = "0.3.2", default-features = false }
spin = { version = "0.9.8" }
maybe-async = "0.2.7"

[features]
# spdm-ring is the default backend so `cargo build`/`cargo test` on this crate
# alone keeps working. Dependents that select a different backend (e.g. the
# standalone aws-lc emu) set default-features = false to avoid linking ring.
default = ["spdm-ring"]
spdm-ring = ["spdmlib/spdm-ring"]
is_sync = ["spdmlib/is_sync", "maybe-async/is_sync"]
std = ["spdmlib/std"]
