[package]
name = "fuzzlib"
version = "0.1.0"
authors = ["haowei <weix.hao@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = { version = "=0.12.12", optional = true }
spdmlib = { path = "../../spdmlib", default-features = false, features=["spdm-ring"] }
simple_logger = "4.2.0"
log = "0.4.13"
ring = { version = "0.17.6" }
flexi_logger = "0.27.2"
spdmlib-test = { path = "../../test/spdmlib-test" }
futures = { version = "0.3", default-features = false }
async-trait = "0.1.71"
async-recursion = "1.0.4"
spin = { version = "0.9.8" }
executor = { path = "../../executor" }

[features]
default = ["hashed-transcript-data", "afl"]
hashed-transcript-data = ["spdmlib/hashed-transcript-data"]
mut-auth = ["spdmlib/mut-auth"]
