[package]
name = "spdm-emu"
version = "0.1.0"
authors = ["Jiewen Yao <jiewen.yao@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.13"
ring = { version = "0.17.6" }
webpki = { version = "0.22.4", default-features = false, features = ["alloc"]}
untrusted = { version = "0.9.0" }
codec = { path = "../../codec" }
spdmlib = { path = "../../spdmlib", default-features = false }
mctp_transport = { path = "../../mctp_transport" }
pcidoe_transport = { path = "../../pcidoe_transport" }
bytes = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false }
async-trait = "0.1.71"
async-recursion = "1.0.4"
spin = { version = "0.9.8" }
tokio = { version = "1.30.0", features = ["full"] }
executor = { path = "../../executor" }
maybe-async = "0.2.7"

spdmlib_crypto_mbedtls = { path = "../../spdmlib_crypto_mbedtls", default-features = false, optional = true }

[features]
default = ["spdm-ring", "spdmlib/hashed-transcript-data", "async-executor"]
mut-auth = ["spdmlib/mut-auth"]
mandatory-mut-auth = ["mut-auth", "spdmlib/mandatory-mut-auth"]
spdm-ring = ["spdmlib/spdm-ring", "spdmlib/std"]
spdm-mbedtls = ["spdmlib_crypto_mbedtls"]
hashed-transcript-data = ["spdmlib/hashed-transcript-data", "spdmlib_crypto_mbedtls?/hashed-transcript-data"]
async-executor = []
async-tokio = []
is_sync = ["spdmlib/is_sync", "maybe-async/is_sync", "mctp_transport/is_sync", "pcidoe_transport/is_sync"]
