[package]
name = "spdm-emu"
version = "0.1.0"
authors = ["Jiewen Yao <jiewen.yao@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.13"
# ring is only used for the emulator's classical secret-signing helper; optional
# so a standalone aws-lc build (spdm-aws-lc without spdm-ring/spdm-mbedtls)
# links no ring.
ring = { version = "0.17.14", optional = true }
untrusted = { version = "0.9.0", optional = true }
codec = { path = "../../codec" }
spdmlib = { path = "../../spdmlib", default-features = false }
mctp_transport = { path = "../../mctp_transport" }
pcidoe_transport = { path = "../../pcidoe_transport" }
bytes = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false }
async-trait = "0.1.71"
async-recursion = "1.0.4"
spin = { version = "0.9.8" }
tokio = { version = "1.30.0", features = ["full"] }
executor = { path = "../../executor" }
maybe-async = "0.2.7"

spdmlib_crypto_mbedtls = { path = "../../spdmlib_crypto_mbedtls", default-features = false, optional = true }
spdmlib_crypto_aws_lc = { path = "../../spdmlib_crypto_aws_lc", optional = true }
aws-lc-rs = { path = "../../external/aws-lc-rs/aws-lc-rs", features = ["unstable"], optional = true }

[features]
default = ["spdm-ring", "spdmlib/hashed-transcript-data", "async-executor"]
mut-auth = ["spdmlib/mut-auth"]
chunk-cap = ["spdmlib/chunk-cap"]
mandatory-mut-auth = ["mut-auth", "spdmlib/mandatory-mut-auth"]
spdm-ring = ["spdmlib/spdm-ring", "spdmlib/std", "dep:ring", "dep:untrusted"]
spdm-mbedtls = ["spdmlib_crypto_mbedtls", "dep:ring", "dep:untrusted"]
# aws-lc-rs crypto (ML-DSA, ML-KEM, and the traditional primitives). Pulls
# spdmlib/std because aws-lc-rs is std-only. Combined with spdm-ring or
# spdm-mbedtls it is a PQC overlay on that classical backend; on its own (no
# spdm-ring, no spdm-mbedtls) it is the standalone backend for BOTH classical
# and PQC crypto, with no ring and no mbedtls linked. std-only (not for no_std).
spdm-aws-lc = ["spdmlib_crypto_aws_lc", "aws-lc-rs", "spdmlib/std"]
hashed-transcript-data = ["spdmlib/hashed-transcript-data", "spdmlib_crypto_mbedtls?/hashed-transcript-data", "spdmlib_crypto_aws_lc?/hashed-transcript-data"]
async-executor = []
async-tokio = []
is_sync = ["spdmlib/is_sync", "maybe-async/is_sync", "mctp_transport/is_sync", "pcidoe_transport/is_sync"]
